[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-folding-flax"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"

dependencies = [
    "pip>=24.2",
    "flax>=0.10.5",
    "jax[cuda12]>=0.5.3",
    "matplotlib>=3.10.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "torch>=2.6.0",
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cpu"}
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
